# MinGL2_IUT_AIX

./: .gitignore  CMakeLists.txt  README.md  mingl.pri
.github/workflows/: build.yml
examples/: README.md
